# MagicSquare_XX

./: .cursorrules  .gitignore  README.md  defect_list.md  main.py  pyproject.toml  pytest.ini
Prompt/: 01.4x4_MagicSquare_Problem_Definition_Report-Prompt.md  01.4x4_MagicSquare_Problem_Definition_Report-Prompt_02.md  01.Prompt_Transcript_STEP1-5.md  02.4x4_MagicSquare_Problem_Definition_Report-Prompt.md  03.4x4_MagicSquare_CursorRules_UserEntity_Transcript-Prompt.md  04.4x4_MagicSquare_CursorRules_MDC_Migration_Transcript-Prompt.md  05.Agent_Definitions_Standardization_Prompt.md  06.4x4_MagicSquare_Level1-5_Transcript-Prompt.md  07.MagicSquare_PRD_Authoring_Transcript.md  08.MagicSquare_TDD_Startup_Transcript.md  09.MagicSquare_AC_FR_01_01_Transcript.md  10.MagicSquare_DualTrack_RED_Design_And_Skeleton_Transcript.md  11.MagicSquare_AC_FR_01_01_Single_Test_GREEN_Transcript.md  12.MagicSquare_DualTrack_Full_GREEN_R1_R8_Transcript.md  14.MagicSquare_REFACTOR_P0_ECB_QA_Transcript.md  15.MagicSquare_QA_Control_Boundary_Smell_Transcript.md  16.MagicSquare_REFACTOR_Classification_Priority_Transcript.md  17.MagicSquare_REFACTOR_Phase0_Integrated_Roadmap_Transcript.md
Prompting/: 07.MagicSquare_PRD_Authoring_Transcript.md  08.MagicSquare_TDD_Startup_Transcript.md  09.MagicSquare_AC_FR_01_01_Transcript.md
Report/: 01.4x4_MagicSquare_Problem_Definition_Report.md  02.4x4_MagicSquare_TDD_Design_Report.md  03.4x4_MagicSquare_CursorRules_UserEntity_Implementation_Report.md  04.4x4_MagicSquare_CursorRules_MDC_Migration_Report.md  05.Agent_Definitions_Standardization_Report.md  06.MagicSquare_Level1-5_Scenario_Verification_Report.md  07.MagicSquare_PRD_Authoring_Review_Report.md  08.MagicSquare_TDD_Startup_ToDo_README_Report.md  09.MagicSquare_AC_FR_01_01_RED_GREEN_Report.md  10.MagicSquare_DualTrack_RED_Design_And_Skeleton_Report.md  12.MagicSquare_DualTrack_Full_GREEN_R1_R8_Report.md  (+5 more)
(+80 files in other folders)
