[project]
name = "magicsquare"
version = "0.1.0"
description = "4x4 Magic Square Dual-Track TDD practice (ECB architecture)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
gui = [
    "PyQt6>=6.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "golden_master: GM-2 Golden Master approval regression tests",
]
addopts = [
    "-v",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=80",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    # Optional PyQt6 GUI — covered by smoke tests when PyQt6 is installed.
    "src/boundary/screen/app.py",
    "src/boundary/screen/main_window.py",
    "src/boundary/screen/grid_input_widget.py",
    "src/boundary/screen/sample_puzzles.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
precision = 0

[tool.coverage.paths]
source = [
    "src/",
    "*/src/",
]
